--- a/src/main/resources/templates/user/actors/showActor.html
+++ b/src/main/resources/templates/user/actors/showActor.html
@@ -161,12 +161,14 @@
                             <td class="category-name">Last Name</td>
                             <td class="category-name">Date of Birth</td>
                             <td class="category-name">Age</td>
+                            <td class="category-name">Country</td>
                         </tr>
                         <tr>
                             <td class="category-info" th:text="${actor.firstName}"></td>
                             <td class="category-info" th:text="${actor.lastName}"></td>
                             <td class="category-info" th:text="${actor.dateOfBirth}"></td>
-                            <td class="category-info" th:text="${actor.lastName}"></td>
+                            <td class="category-info" th:text="${actor.age}"></td>
+                            <td class="category-info" th:text="${actor.country}"></td>
                         </tr>
                     </table>
                     <div class="single-movie-infos-description">
