--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -28,7 +28,7 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 12px;
     line-height: 1.42857;
-    min-height: 1500px;
+    min-height: 2150px;
     max-height: max-content;
 }
 
@@ -75,6 +75,10 @@ img {
     padding: 0;
     display: flex;
     flex-direction: column;
+}
+
+.movies-listing-actor {
+    height: 550px;
 }
 
 .movies-listing .movies-listing-extra {
@@ -217,7 +221,6 @@ img {
     padding: 0;
 }
 
-
 .home-listing .home-listing-title {
     color: #4169E1;
     font-size: 35px;
@@ -286,8 +289,8 @@ img {
     height: 450px;
     margin-bottom: 50px;
     padding: 0;
-
 }
+
 
 .single-movie-infos {
     background-color: #f7f7f7;
@@ -420,6 +423,140 @@ img {
 
 
 .single-movie-listing .single-movie-box-image-container .single-movie-box-image {
+    border-bottom: 1px solid #ededed;
+    border-top-left-radius: 9px;
+    border-top-right-radius: 9px;
+    display: block;
+    margin: auto;
+    width: 100%;
+    height: 450px;
+    background-size: cover;
+}
+
+/*Show News Page*/
+.single-news-listing {
+    background-color: #f7f7f7;
+    border: 2px solid #f1f3f0;
+    border-radius: 9px;
+    box-shadow: 0 1px #f1f3f0;
+    height: 450px;
+    margin-bottom: 50px;
+    padding: 0;
+
+}
+
+.single-news-infos {
+    background-color: #f7f7f7;
+    border: 2px solid #f1f3f0;
+    border-radius: 9px;
+    box-shadow: 0 1px #f1f3f0;
+    height: auto;
+    min-height: 450px;
+    margin-bottom: 50px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.single-news-infos-buttons {
+    margin-top: auto;
+    display: flex;
+    justify-content: space-around;
+}
+
+
+.single-news-infos .single-movie-infos-title {
+    font-weight: bold;
+    line-height: 25px;
+    max-height: 75px;
+    overflow: hidden;
+    text-transform: uppercase;
+}
+
+
+.single-news-infos-secondary {
+    background-color: #f7f7f7;
+    border: 2px solid #f1f3f0;
+    border-radius: 9px;
+    box-shadow: 0 1px #f1f3f0;
+    height: auto;
+    margin-bottom: 50px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.single-news-infos-secondary .single-movie-infos-title {
+    font-weight: bold;
+    line-height: 25px;
+    /*margin-bottom: 30px;*/
+    max-height: 75px;
+    overflow: hidden;
+    text-transform: uppercase;
+}
+
+.single-news-infos-secondary .single-news-infos-description {
+    /*background-color: pink;*/
+    font-size: 30px;
+    /*margin-top: 20px;*/
+    font-weight: bold;
+    line-height: 70px;
+    overflow: hidden;
+}
+
+
+.single-news-actors {
+    background-color: #f7f7f7;
+    border: 2px solid #f1f3f0;
+    border-radius: 9px;
+    box-shadow: 0 1px #f1f3f0;
+    height: 175px;
+    /*margin-bottom: 50px;*/
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.single-news-actors .single-news-actors-box-image-container .single-news-actors-box-image {
+    border-bottom: 1px solid #ededed;
+    border-top-left-radius: 9px;
+    border-top-right-radius: 9px;
+    display: block;
+    margin: auto;
+    width: 100%;
+    height: 175px;
+    background-size: cover;
+}
+
+
+.single-news-infos .single-news-infos-description {
+    /*background-color: pink;*/
+    font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-weight: bold;
+    line-height: 40px;
+    min-height: 165px;
+    overflow: hidden;
+}
+
+
+.single-news-infos .single-news-infos-additional {
+    color: #4169E1;
+    font-size: 20px;
+    margin-top: 15px;
+    font-weight: bold;
+    line-height: 20px;
+    min-height: 30px;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.single-news-listing .single-news-box-image-container .single-news-box-image {
     border-bottom: 1px solid #ededed;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
