--- a/src/main/resources/templates/fragmets/actordiv.html
+++ b/src/main/resources/templates/fragmets/actordiv.html
@@ -16,53 +16,40 @@
 <!--/*@thymesVar id="actor" type="adrianromanski.movies.domain.person.Actor"*/-->
 <!--/*@thymesVar id="actorDTO" type="adrianromanski.movies.model.person.ActorDTO"*/-->
 <div class="col-md-3" th:fragment="actordiv">
-    <div class="movies-listing movies-listing-actor">
+    <div class="listing listing-actor">
         <div class="row">
             <a th:href="@{'/actor/' + ${actor.id}}">
                 <div class="col-lg-12">
-                    <div class="movies-box-image-container">
+                    <div class="box-image-container">
                         <img role="presentation"
                              th:src="@{'/actor/' + ${actor.id} + '/actorImage'}"
-                             class="movies-box-image">
+                             class="box-image">
                     </div>
-                    <div class="movies-listing-title" th:text="${actor.firstName} + ' ' + ${actor.lastName}"></div>
-<!--                    <div class="movies-listing-description" th:text="${actor.description}"></div>-->
+                    <div class="listing-title" th:text="${actor.firstName} + ' ' + ${actor.lastName}"></div>
                 </div>
             </a>
         </div>
-        <div class="movies-listing-extra">
-<!--            <div class="movies-listing-extra-item col-md-4">-->
-<!--                <div class="small movie-price">-->
-<!--                    Awards-->
-<!--                </div>-->
-<!--            </div>-->
-            <div class="movies-listing-extra-item col-md-4">
+        <div class="listing-extra">
+            <div class="listing-extra-item col-md-4">
                 <div class="small movie-price">
                     Age
                 </div>
             </div>
-            <div class="movies-listing-extra-item col-md-4">
+            <div class="listing-extra-item col-md-4">
                 <div class="small movie-price">
                     Country
                 </div>
             </div>
         </div>
-        <div class="movies-listing-extra">
-<!--            <div class="movies-listing-extra-item col-md-4">-->
-<!--                <div class="small movie-price">-->
-<!--                    0-->
-<!--                </div>-->
-<!--            </div>-->
-            <div class="movies-listing-extra-item col-md-4">
-                <div class="small movie-price" th:text="${actor.age}"></div>
+        <div class="listing-extra">
+            <div class="listing-extra-item col-md-4">
+                <div class="small price" th:text="${actor.age}"></div>
             </div>
             <div class="movies-listing-extra-item col-md-4">
-                <div class="small movie-price" th:text="${actor.country}"></div>
+                <div class="small price" th:text="${actor.country}"></div>
             </div>
         </div>
-
     </div>
 </div>
-
 </body>
 </html>
