--- a/src/main/resources/templates/fragmets/categorydiv.html
+++ b/src/main/resources/templates/fragmets/categorydiv.html
@@ -15,26 +15,26 @@
 <body>
 <!--/*@thymesVar id="category" type="adrianromanski.movies.domain.base_entity.Category"*/-->
     <div class="col-md-3" th:fragment="categorydiv">
-        <div class="movies-listing">
+        <div class="listing">
             <div class="row">
                 <a th:href="@{'/category/' + ${category.name} +'/page/1'}">
                     <div class="col-lg-12">
-                        <div class="movies-box-image-container">
+                        <div class="box-image-container">
                             <img role="presentation"
                                  th:src="@{'/category/' + ${category.id} + '/categoryImage'}"
-                                 class="movies-box-image">
+                                 class="box-image">
                         </div>
-                        <div class="movies-listing-title" th:text="${category.name}"></div>
-                        <div class="movies-listing-description" th:text="${category.description}"></div>
+                        <div class="listing-title" th:text="${category.name}"></div>
+                        <div class="listing-description" th:text="${category.description}"></div>
                     </div>
                 </a>
             </div>
-            <div class="movies-listing-extra col-md-4">
-                <div class="small movie-price">
+            <div class="listing-extra col-md-4">
+                <div class="small price">
                     Movies
                 </div>
-                <div class="movies-listing-extra col-md-4">
-                    <div class="small movie-price" th:text="${category.moviesDTO.size()}"></div>
+                <div class="listing-extra col-md-4">
+                    <div class="small price" th:text="${category.moviesDTO.size()}"></div>
                 </div>
             </div>
         </div>
