--- a/src/main/resources/templates/fragmets/eventdiv.html
+++ b/src/main/resources/templates/fragmets/eventdiv.html
@@ -15,12 +15,12 @@
 <body>
 <!--/*@thymesVar id="movie" type="adrianromanski.movies.domain.base_entity.Event"*/-->
 <div class="col-md-12" th:fragment="eventdiv">
-    <div class="home-listing">
+    <div class="listing listing-home">
         <div class="row">
             <a th:href="@{'/event/' + ${event.id}}">
                 <div class="col-lg-12">
-                    <div class="home-listing-title" th:text="${event.name}"></div>
-                    <div class="home-listing-description" th:text="${event.description}"></div>
+                    <div class="listing-title" th:text="${event.name}"></div>
+                    <div class="listing-description-home" th:text="${event.description}"></div>
                 </div>
             </a>
         </div>
