--- a/src/main/resources/templates/user/actors/showActor.html
+++ b/src/main/resources/templates/user/actors/showActor.html
@@ -132,13 +132,13 @@
 
 
     <div class="col-md-3">
-        <div class="single-movie-listing">
+        <div class="listing listing-single">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="single-movie-box-image-container">
+                    <div class="box-image-container">
                         <img role="presentation"
                              th:src="@{'/actor/' + ${actor.id} + '/actorImage'}"
-                             class="single-movie-box-image">
+                             class="box-image">
                     </div>
                 </div>
             </div>
@@ -146,11 +146,11 @@
     </div>
 
     <div class="col-md-9">
-        <div class="single-movie-infos">
+        <div class="listing listing-single-info">
 
             <div class="panel-primary">
                 <div class="panel-heading">
-                    <div class="single-movie-infos-title">
+                    <div class="single-infos-title">
                         <h4 th:text="${actor.firstName} + ' ' + ${actor.lastName}"></h4>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                             <td class="category-info" th:text="${actor.country}"></td>
                         </tr>
                     </table>
-                    <div class="single-movie-infos-description">
+                    <div class="single-info-description">
                         I can put here something like small infos about actor life/career
                     </div>
                 </div>
@@ -179,10 +179,10 @@
         </div>
     </div>
     <div class="col-md-12">
-        <div class="single-movie-infos-secondary">
+        <div class="listing single-info-secondary">
             <div class="panel-info">
                 <div class="panel-heading">
-                    <div class="single-movie-infos-title">
+                    <div class="single-infos-title">
                         <h4>Actor Movies</h4>
                     </div>
                 </div>
@@ -205,8 +205,24 @@
                             </td>
                         </tr>
                     </table>
-                    <div class="col-md-12 single-movie-infos-buttons">
+                    <div class="col-md-12 single-infos-buttons">
                         <a class="btn btn-primary btn-lg" href="#" th:href="@{'/actor/' + ${actor.id} +'/movies'}" role="button">Show All</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-12">
+        <div class="listing single-info-secondary">
+            <div class="panel-info">
+                <div class="panel-heading">
+                    <div class="single-infos-title">
+                        <h4>User Comments</h4>
+                    </div>
+                </div>
+                <div class="panel-body">
+                    <div class="single-info-description">
+                        COMING SOON
                     </div>
                 </div>
             </div>
