--- a/src/main/resources/templates/user/actors/showActors.html
+++ b/src/main/resources/templates/user/actors/showActors.html
@@ -136,11 +136,11 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h1 class="category-header-2">Actors</h1>
+        <h1 class="section-header">Actors</h1>
     </div>
 </div>
 
-<div class="container col-md-10 col-md-offset-1 movies-section" style="margin-top: 75px">
+<div class="container col-md-10 col-md-offset-1 movies-section" style="margin-top: 25px">
     <div class="row">
         <div class="row">
             <div th:each="actor: ${actorsList}">
