--- a/src/main/resources/templates/user/events/showEvent.html
+++ b/src/main/resources/templates/user/events/showEvent.html
@@ -132,13 +132,13 @@
 
 
     <div class="col-md-12">
-        <div class="single-news-listing">
+        <div class="listing listing-single">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="single-news-box-image-container">
+                    <div class="box-image-container">
                         <img role="presentation"
                              th:src="@{'/news/' + ${event.id} + '/newsImage'}"
-                             class="single-news-box-image">
+                             class="box-image">
                     </div>
                 </div>
             </div>
@@ -147,30 +147,30 @@
 
 
     <div class="col-md-12">
-        <div class="single-news-infos">
+        <div class="listing listing-single-info">
 
             <div class="panel-primary">
                 <div class="panel-heading">
-                    <div class="single-news-infos-title">
+                    <div>
                         <h4 th:text="${event.name}"></h4>
                     </div>
                 </div>
                 <div class="panel-body">
-                    <div class="single-news-infos-description" th:text="${event.description} + ${event.largeDescription}"></div>
+                    <div class="single-info-description" th:text="${event.description} + ${event.largeDescription}"></div>
                 </div>
             </div>
         </div>
     </div>
     <div class="col-md-12">
-        <div class="single-news-infos-secondary">
+        <div class="listing single-info-secondary">
             <div class="panel-info">
                 <div class="panel-heading">
-                    <div class="single-news-infos-title">
+                    <div >
                         <h4>User Comments</h4>
                     </div>
                 </div>
                 <div class="panel-body">
-                    <div class="single-news-infos-description">
+                    <div class="single-info-description">
                         COMING SOON
                     </div>
                 </div>
