--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -130,11 +130,15 @@
     });
 </script>
 
+<div class="row">
+    <div class="col-md-12">
+        <h1 class="section-header">Breaking News</h1>
+    </div>
+</div>
 
-<div class="container" style="margin-top: 75px"></div>
+<div class="container" style="margin-top: 25px"></div>
 
-
-    <div class="container col-md-10 col-md-offset-1 movies-section" style="margin-top: 75px">
+    <div class="container col-md-10 col-md-offset-1 section">
         <div class="row">
             <div class="row">
                 <div th:each="event: ${events}">
@@ -145,44 +149,6 @@
         </div>
     </div>
 
-<!--    <div class="home-listing">-->
-<!--        <a th:href="@{'/categories/'}">-->
-<!--        <div class="row">-->
-<!--                <div class="col-lg-12">-->
-<!--                    <div class="home-listing-title" th:text="${'Event Name'}"></div>-->
-<!--                    <div class="home-listing-description" th:text="${'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum'}"></div>-->
-<!--                </div>-->
-<!--        </div>-->
-<!--        </a>-->
-<!--    </div>-->
-
-<!--    <div class="home-listing">-->
-<!--        <a th:href="@{'/categories/'}">-->
-<!--            <div class="row">-->
-<!--                <div class="col-lg-12">-->
-<!--                    <div class="home-listing-title" th:text="${'Event Name'}"></div>-->
-<!--                    <div class="home-listing-description" th:text="${'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum'}"></div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </a>-->
-<!--    </div>-->
-
-<!--    <div class="home-listing">-->
-<!--        <a th:href="@{'/categories/'}">-->
-<!--            <div class="row">-->
-<!--                <div class="col-lg-12">-->
-<!--                    <div class="home-listing-title" th:text="${'Event Name'}"></div>-->
-<!--                    <div class="home-listing-description" th:text="${'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum'}"></div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </a>-->
-<!--    </div>-->
-
-
-
-
 </body>
-
-
 
 </html>
