--- a/src/main/resources/templates/user/movies/showMovie.html
+++ b/src/main/resources/templates/user/movies/showMovie.html
@@ -132,13 +132,13 @@
 
 
 <div class="col-md-3">
-    <div class="single-movie-listing">
+    <div class="listing listing-single">
         <div class="row">
                 <div class="col-lg-12">
-                    <div class="single-movie-box-image-container">
+                    <div class="box-image-container">
                         <img role="presentation"
                              th:src="@{'/movie/' + ${movie.id} + '/movieImage'}"
-                             class="single-movie-box-image">
+                             class="box-image">
                     </div>
                 </div>
         </div>
@@ -146,11 +146,11 @@
 </div>
 
 <div class="col-md-9">
-    <div class="single-movie-infos">
+    <div class="listing listing-single-info">
 
         <div class="panel-primary">
            <div class="panel-heading">
-               <div class="single-movie-infos-title">
+               <div class="single-infos-title">
                    <h4 th:text="${movie.name}"></h4>
                </div>
            </div>
@@ -169,13 +169,13 @@
                        <td class="category-info" th:text="${movie.year}"></td>
                    </tr>
                </table>
-               <div class="single-movie-infos-description"
+               <div class="single-info-description"
                th:text="${movie.description}">
                </div>
            </div>
         </div>
 
-            <div class="col-md-12 single-movie-infos-buttons">
+            <div class="col-md-12 single-info-buttons">
 <!--                <a class="btn btn-primary btn-lg" href="#" th:href="@{'/movie/' + ${movie.id} +'/actors'}" role="button">Show Actors</a>-->
                 <a class="btn btn-primary btn-lg" href="#" role="button">Show Director</a>
                 <a class="btn btn-primary btn-lg" href="#" role="button">Show Awards</a>
@@ -184,10 +184,10 @@
     </div>
 </div>
     <div class="col-md-12">
-        <div class="single-movie-infos-secondary">
+        <div class="listing single-info-secondary">
             <div class="panel-info">
                 <div class="panel-heading">
-                    <div class="single-movie-infos-title">
+                    <div class="single-infos-title">
                         <h4>ACTORS</h4>
                     </div>
                 </div>
@@ -208,7 +208,7 @@
                             </td>
                         </tr>
                     </table>
-                    <div class="col-md-12 single-movie-infos-buttons">
+                    <div class="col-md-12 single-infos-buttons">
                         <a class="btn btn-primary btn-lg" href="#" th:href="@{'/movie/' + ${movie.id} +'/actors'}" role="button">Show All</a>
                     </div>
                 </div>
@@ -216,15 +216,15 @@
         </div>
     </div>
     <div class="col-md-12">
-        <div class="single-movie-infos-secondary">
+        <div class="listing single-info-secondary">
             <div class="panel-info">
                 <div class="panel-heading">
-                    <div class="single-movie-infos-title">
+                    <div class="single-infos-title">
                         <h4>User Comments</h4>
                     </div>
                 </div>
                 <div class="panel-body">
-                    <div class="single-movie-infos-description">
+                    <div class="single-info-description">
                         COMING SOON
                     </div>
                 </div>
