--- a/src/main/resources/templates/user/movies/showMovies.html
+++ b/src/main/resources/templates/user/movies/showMovies.html
@@ -135,11 +135,11 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h1 class="category-header-2">Movies</h1>
+        <h1 class="section-header">Movies</h1>
     </div>
 </div>
 
-<div class="container col-md-10 col-md-offset-1 movies-section" style="margin-top: 75px">
+<div class="container col-md-10 col-md-offset-1 section" style="margin-top: 25px">
     <div class="row">
         <div class="row">
             <div th:each="movie: ${moviesDTOList}">
