--- a/src/main/resources/templates/user/category/categoryMovies.html
+++ b/src/main/resources/templates/user/category/categoryMovies.html
@@ -15,24 +15,36 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
 
-    <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>en"/>
+    <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
 
-    <title>Movies</title>
+    <title>Category Page</title>
 </head>
 <div class="jumbotron" th:replace="fragmets/jumbotron :: jumbotron"></div>
 <body>
-<script>
-    $(document).ready(function(){
-        $('.dropdown-submenu a.test').on("click", function(e){
-            $(this).next('ul').toggle();
-            e.stopPropagation();
-            e.preventDefault();
-        });
-    });
-</script>
 
 <ul class="nav nav-pills admin-navbar">
+
     <li><a href="#" th:href="@{'/'}" >Main Page</a></li>
+    <li class="dropdown">
+        <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
+            News <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+            <li><a href="#" type="button" th:href="@{'/news/sorted/asc/date/page/1'}" >Show All News</a></li>
+            <li class="dropdown-submenu">
+                <a class="test" tabindex="-1" href="#">Sorted By<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li class="dropdown-submenu">
+                        <a class="test" href="#">Date<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" th:href="@{'/news/sorted/asc/date/page/1'}">Ascending</a></li>
+                            <li><a href="#" th:href="@{'/news/sorted/desc/date/page/1'}" >Descending</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </li>
     <li class="dropdown">
         <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
             Categories <span class="caret"></span>
@@ -128,54 +140,44 @@
 </ul>
 
 
-<div class="container-fluid" style="margin-top: 50px">
+<script>
+    $(document).ready(function(){
+        $('.dropdown-submenu a.test').on("click", function(e){
+            $(this).next('ul').toggle();
+            e.stopPropagation();
+            e.preventDefault();
+        });
+    });
+</script>
 
-
+<div class="row">
     <div class="col-md-12">
-        <div class="listing listing-single">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="box-image-container">
-                        <img role="presentation"
-                             th:src="@{'/news/' + ${event.id} + '/newsImage'}"
-                             class="box-image">
-                    </div>
+        <h1 class="section-header" th:text="${categoryDTO.name}"></h1>
+    </div>
+</div>
+
+<div class="container col-md-10 col-md-offset-1 movies-section" style="margin-top: 25px">
+    <div class="row">
+        <div class="row">
+            <div th:each="movie: ${moviesDTOList}">
+                <div th:replace="fragmets/moviediv :: moviediv">
                 </div>
             </div>
         </div>
     </div>
 
-
-    <div class="col-md-12">
-        <div class="listing listing-single-info">
-
-            <div class="panel-primary">
-                <div class="panel-heading">
-                    <div>
-                        <h4 th:text="${event.name}"></h4>
-                    </div>
-                </div>
-                <div class="panel-body">
-                    <div class="single-info-description" th:text="${event.description} + ${event.largeDescription}"></div>
-                </div>
-            </div>
+    <div class="row" th:fragment="pagination">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <nav aria-label="Pagination">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item" th:each="pageNumber : ${pageNumbers}" >
+                        <a class="page-link" th:href="@{|/category/${categoryDTO.name}/page/${pageNumber}|}" th:text=${pageNumber}>1</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-    </div>
-    <div class="col-md-12">
-        <div class="listing single-info-secondary">
-            <div class="panel-info">
-                <div class="panel-heading">
-                    <div >
-                        <h4>User Comments</h4>
-                    </div>
-                </div>
-                <div class="panel-body">
-                    <div class="single-info-description">
-                        COMING SOON
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="col-md-2"></div>
     </div>
 </div>
 </body>
