--- a/src/main/resources/templates/user/home/home.html
+++ b/src/main/resources/templates/user/home/home.html
@@ -15,18 +15,37 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
 
-    <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>en"/>
+    <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
 
     <title>Movies World Home Page</title>
 </head>
 <div class="jumbotron" th:replace="fragmets/jumbotron :: jumbotron"></div>
 <body>
 
-
 <ul class="nav nav-pills admin-navbar">
 
-    <li><a href="#" th:href="@{'/'}" >Main Page</a></li>
-    <li class="dropdown active">
+    <li class="active"><a href="#" th:href="@{'/'}" >Main Page</a></li>
+    <li class="dropdown">
+        <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
+            News <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+            <li><a href="#" type="button" th:href="@{'/news/sorted/asc/date/page/1'}" >Show All News</a></li>
+            <li class="dropdown-submenu">
+                <a class="test" tabindex="-1" href="#">Sorted By<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li class="dropdown-submenu">
+                        <a class="test" href="#">Date<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" th:href="@{'/news/sorted/asc/date/page/1'}">Ascending</a></li>
+                            <li><a href="#" th:href="@{'/news/sorted/desc/date/page/1'}" >Descending</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </li>
+    <li class="dropdown">
         <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
             Categories <span class="caret"></span>
         </a>
@@ -131,40 +150,25 @@
     });
 </script>
 
-
-
-
 <div class="row">
     <div class="col-md-12">
-        <h1 class="section-header"> Categories</h1>
+        <h1 class="section-header">Breaking News</h1>
     </div>
 </div>
 
-<div class="container col-md-10 col-md-offset-1 movies-section" style="margin-top: 25px">
-    <div class="row">
+<div class="container" style="margin-top: 25px"></div>
+
+    <div class="container col-md-10 col-md-offset-1 section">
         <div class="row">
-            <div th:each="category: ${categoriesDTOList}">
-                <div th:replace="fragmets/categorydiv :: categorydiv">
+            <div class="row">
+                <div th:each="news: ${latestNews}">
+                    <div th:replace="fragmets/newsdiv :: newsdiv">
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
-
-<div class="row" th:fragment="pagination">
-    <div class="col-md-2"></div>
-    <div class="col-md-8">
-        <nav aria-label="Pagination">
-            <ul class="pagination justify-content-center">
-                <li class="page-item" th:each="pageNumber : ${pageNumbers}" >
-                    <a class="page-link" th:href="@{|/categories/page/${pageNumber}|}" th:text=${pageNumber}>1</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-    <div class="col-md-2"></div>
-</div>
 
 </body>
+
 </html>
